Added metadata support

--- a/packages/demo-merkle-auth-backend/package.json
+++ b/packages/demo-merkle-auth-backend/package.json
@@ -2,7 +2,7 @@
   "name": "demo-merkle-auth-backend",
   "private": true,
   "scripts": {
-    "start": "nodemon --watch ../merkle-auth-core --watch ../merkle-auth-array --watch ../merkle-auth-jsonpath --watch .  -r esm server.js"
+    "start": "nodemon --watch ../merkle-auth --watch ../merkle-auth-object --watch ../merkle-auth-metadata --watch .  -r esm server.js"
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
@@ -11,8 +11,9 @@
     "koa-body": "^4.1.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^8.0.6",
-    "merkle-auth-array": "^0.0.1",
-    "merkle-auth-jsonpath": "^0.0.1"
+    "merkle-auth": "^0.0.1",
+    "merkle-auth-metadata": "^0.0.1",
+    "merkle-auth-object": "^0.0.1"
   },
   "devDependencies": {
     "esm": "^3.2.25",
