--- a/packages/demo-merkle-auth-frontend/package.json
+++ b/packages/demo-merkle-auth-frontend/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "dependencies": {
     "isomorphic-unfetch": "^3.0.0",
-    "merkle-auth-array": "^0.0.1",
-    "merkle-auth-jsonpath": "^0.0.1",
+    "merkle-auth": "^0.0.1",
+    "merkle-auth-metadata": "^0.0.1",
+    "merkle-auth-object": "^0.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
