--- a/packages/demo-merkle-auth-frontend/package.json
+++ b/packages/demo-merkle-auth-frontend/package.json
@@ -6,6 +6,7 @@
     "merkle-auth": "^0.0.1",
     "merkle-auth-metadata": "^0.0.1",
     "merkle-auth-object": "^0.0.1",
+    "merkle-auth-salt": "^0.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
