--- a/packages/merkle-auth-salt/package.json
+++ b/packages/merkle-auth-salt/package.json
@@ -14,7 +14,7 @@
   "author": "Gregor Eesmaa",
   "license": "SEE LICENSE IN ?",
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^4.0.0",
     "merkle-auth": "0.0.1"
   }
 }
