--- a/packages/demo-merkle-auth-backend/package.json
+++ b/packages/demo-merkle-auth-backend/package.json
@@ -7,17 +7,17 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
-    "@koa/router": "^8.0.6",
+    "@koa/router": "^8.0.8",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-logger": "^3.2.1",
-    "koa-router": "^8.0.6",
+    "koa-router": "^8.0.8",
     "merkle-auth": "^0.0.1",
     "merkle-auth-object": "^0.0.1",
-    "merkle-auth-salt": "^0.0.1"
+    "merkle-auth-salt": "^0.0.1",
+    "esm": "^3.2.25"
   },
   "devDependencies": {
-    "esm": "^3.2.25",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.3"
   }
 }
