--- a/packages/merkle-auth/package.json
+++ b/packages/merkle-auth/package.json
@@ -12,6 +12,6 @@
   "author": "Gregor Eesmaa",
   "license": "SEE LICENSE IN ?",
   "dependencies": {
-    "crypto-js": "^3.1.9-1"
+    "crypto-js": "^4.0.0"
   }
 }
